Added final notebooks from Colab

--- a/notebooks/resnet18-concatenated.ipynb
+++ b/notebooks/resnet18-concatenated.ipynb
@@ -679,17 +679,17 @@
     "    pooling = layers.GlobalAveragePooling2D()(pre_trained_model.output)\n",
     "\n",
     "    # Build new model structure\n",
-    "    resnet_50 = Model(inputs=pre_trained_model.input, outputs=pooling)\n",
+    "    resnet_18 = Model(inputs=pre_trained_model.input, outputs=pooling)\n",
     "\n",
     "    # Concatenate\n",
-    "    combined_input = concatenate([mlp.output, resnet_50.output])\n",
-    "    add_layer = Dense(dense_hidden_neurons, activation='relu', kernel_regularizer=regularizers.l2(0.1))(combined_input)\n",
+    "    combined_input = concatenate([mlp.output, resnet_18.output])\n",
+    "    add_layer = Dense(dense_hidden_neurons, activation='relu')(combined_input)\n",
     "\n",
     "    # Add output layer for regression\n",
     "    output_layer = Dense(1, activation='linear')(add_layer)\n",
     "\n",
     "    # Final model\n",
-    "    model = Model(inputs=[resnet_50.input, mlp.input], outputs=output_layer)\n",
+    "    model = Model(inputs=[resnet_18.input, mlp.input], outputs=output_layer)\n",
     "\n",
     "    optim = Adam(lr=lr)\n",
     "\n",
