--- a/notebooks/resnet18.ipynb
+++ b/notebooks/resnet18.ipynb
@@ -577,7 +577,7 @@
     "- dense_hidden_neurons=32\n",
     "- lr=0.001\n",
     "\n",
-    "Based on the paper by Sarić et al. (2019), where a fine-tuned VGG16 model is employed for the task of bone age prediction on the RSNA dataset, I use the Adam optimizer.\n",
+    "Based on the paper by Sarić et al. (2019), where a fine-tuned ResNet50 model is employed for the task of bone age prediction on the RSNA dataset, I use the Adam optimizer.\n",
     "\n",
     "Sarić, R., Kevrić, J., Čustović, E., Jokić, D., & Beganović, N. (2019). Evaluation of Skeletal Gender and Maturity for Hand Radiographs using Deep Convolutional Neural Networks. In 2019 6th International Conference on Control, Decision and Information Technologies (CoDIT) (pp. 1115-1120). IEEE."
    ]
